<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Spojenci</string>
	<string name="reload">Reload</string>
	<string name="ok">OK</string>
	<string name="close">Close</string>
	<string name="cancel">Cancel</string>

	<string name="title_about">About</string>
	<string name="title_activity_login">Account</string>
	<string name="title_activity_challenge_detail">Challenge</string>
	<string name="title_activity_update_challenge">Activity report</string>
	<string name="title_activity_update_challenge_with_name">Activity report - %1$s</string>
	<string name="title_activity_fit_detail">Google Fit Activity</string>

	<!-- login page -->
	<string name="login_email_description"><![CDATA[Sign In with Email & Password]]></string>
	<string name="login_revoke">Revoke access</string>
	<string name="login_disconnect">Sign Out</string>
	<string name="login_disconnect_ask">Do you want to sign out?</string>
	<string name="login_status_connected">Signed in via %1$s</string>
	<string name="login_prompt_email">Email</string>
	<string name="login_prompt_password">Password</string>
	<string name="login_action_sign_in">Sign in with Email</string>
	<string name="login_action_sign_in_short">Sign in</string>
	<string name="login_in_process">Signing in…</string>
	<string name="login_expired">Login has expired, do you want to sign in again?</string>
	<string name="login_again">Sign in again</string>
	<string name="login_user_profile_failed">Failed to load user profile</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>

	<!-- general errors -->
	<string name="error_internet">There seems to be a connectivity problem</string>
	<string name="error_general">Something went wrong</string>
	<string name="error_auth">Login has expired, please sign in again</string>
	<string name="error_invalid_user">Invalid user</string>
	<string name="error_login">Failed to login the user\n %1$s</string>
	<string name="error_bad_request">Bad request</string>
	<string name="error_server_error">Server error occurred, please try again later</string>

	<string name="main_connect_google_fit">Connect with Google Fit</string>
	<string name="main_login">Sign in with your Spojenci account</string>
	<string name="main_challenges">My Challenges</string>
	<string name="main_activity">My Activity in Google Fit</string>
	<string name="main_challenges_empty">No challenges</string>
	<string name="main_activity_empty">No activity in Google Fit</string>
	<string name="main_permission_location_rationale">Location permission is required to access the Google Fit data.</string>
	<string name="main_permission_location_denied">Permission hasn\'t been granted. Can\'t connect to the Google Fit.</string>
	<string name="main_contributions">contributions total:</string>
	<string name="main_about_project">About Project</string>
	<string name="main_disconnect_google_fit">Disconnect Google Fit</string>

	<string name="challenge_detail_empty">No Activities</string>
	<string name="challenge_detail_total_attributions">Total attributions:</string>
	<string name="challenge_detail_unit_price">Price per %1$s:</string>
	<string name="challenge_detail_activity">Activity</string>
	<string name="challenge_detail_pay">Pay</string>
	<string name="challenge_detail_to_pay">To pay</string>

	<string name="update_challenge_send">Send</string>
	<string name="update_challenge_activity_validation">Please fill in the activity value or comment</string>
	<string name="update_challenge_sent">Activity has been sent</string>
	<string name="update_challenge_description">Enter your activity or comment or both</string>
    <string name="update_challenge_activity_value">Amount</string>
	<string name="update_challenge_comment">Comment</string>

	<string name="fit_detail_attach_to_challenge">Report to challenge</string>
	<string name="fit_detail_attached_to_challenge">Reported with challenge %1$s</string>
	<string name="fit_detail_pick_challenge">Pick the challenge:</string>

	<string name="payment_notification_title">Payment in progress</string>
	<string name="payment_notification_message">Payment is in progress, tap to return</string>


</resources>
