<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<FrameLayout android:id="@+id/activity_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:focusableInTouchMode="true">

		<ScrollView
			android:id="@+id/login_container"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fillViewport="true"
			tools:context=".activity.EmailLoginActivity">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:paddingBottom="@dimen/activity_vertical_margin"
				android:paddingLeft="@dimen/activity_horizontal_margin"
				android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="@dimen/activity_vertical_margin">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:layout_marginBottom="@dimen/padding"
					android:layout_gravity="center_horizontal"
					android:text="@string/main_login"/>

				<ImageView android:id="@+id/login_logo"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/padding"
					android:layout_gravity="center_horizontal"
					android:src="@drawable/bg_logo_big"/>

				<Button android:id="@+id/login_google"
					android:layout_width="220dp"
					android:layout_height="48dp"
					android:layout_gravity="center_horizontal"
					android:layout_margin="@dimen/padding"
					android:elevation="@dimen/padding"
					android:padding="@dimen/padding"
					android:background="@drawable/bg_button_white"
					android:textColor="@color/common_google_signin_btn_text_light"
					android:drawableStart="@drawable/common_google_signin_btn_icon_light"
					android:drawablePadding="@dimen/padding"
					android:text="@string/common_signin_button_text_long"/>

				<Button android:id="@+id/login_facebook"
					android:layout_width="220dp"
					android:layout_height="48dp"
					android:layout_gravity="center_horizontal"
					android:layout_margin="@dimen/padding"
					android:padding="@dimen/padding"
					android:elevation="@dimen/padding"
					android:background="@color/com_facebook_button_background_color"
					android:textColor="@color/com_facebook_button_text_color"
					android:drawableStart="@drawable/com_facebook_button_icon_white"
					android:drawablePadding="@dimen/padding"
					android:text="@string/com_facebook_loginview_log_in_button_long"/>

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:visibility="gone"
					android:orientation="vertical">

					<!-- Email sign-in is disabled for now -->

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginTop="@dimen/activity_vertical_margin"
						android:layout_gravity="start"
						android:padding="@dimen/padding"
						android:text="@string/login_email_description" />

					<android.support.design.widget.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<EditText
							android:id="@+id/email"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/login_prompt_email"
							android:inputType="textEmailAddress"
							android:maxLines="1"
							android:singleLine="true" />

					</android.support.design.widget.TextInputLayout>

					<android.support.design.widget.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content">

						<EditText
							android:id="@+id/password"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:hint="@string/login_prompt_password"
							android:imeActionId="@+id/email_login"
							android:imeActionLabel="@string/login_action_sign_in_short"
							android:imeOptions="actionUnspecified"
							android:inputType="textPassword"
							android:maxLines="1" />

					</android.support.design.widget.TextInputLayout>

					<Button
						android:id="@+id/login_email_sign_in_button"
						style="?android:textAppearanceSmall"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="16dp"
						android:text="@string/login_action_sign_in"
						android:textStyle="bold" />
				</LinearLayout>


			</LinearLayout>
		</ScrollView>

		<!-- Login progress -->
		<LinearLayout android:id="@+id/login_progress"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_gravity="center"
			android:visibility="gone">

			<ProgressBar
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_vertical_margin"
				android:layout_gravity="start"
				android:text="@string/login_in_process"/>
		</LinearLayout>

		<FrameLayout
			android:id="@+id/login_sign_out_container"
			style="?android:buttonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:visibility="gone"
			tools:visibility="visible">

			<TextView android:id="@+id/login_status"
				style="?android:textAppearanceLarge"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:gravity="center"
				android:text="@string/login_status_connected"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="bottom">

				<Button
					style="?android:buttonBarButtonStyle"
					android:id="@+id/login_revoke"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/login_revoke"/>

				<Button
					style="?android:buttonBarButtonStyle"
					android:id="@+id/login_sign_out"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/login_disconnect"/>
			</LinearLayout>

		</FrameLayout>
	</FrameLayout>

</layout>

