<?xml version="1.0" encoding="utf-8"?>
<layout>

	<data>
		<variable name="user"
			type="cz.spojenci.android.data.User"/>
	</data>

	<FrameLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/activity_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:paddingTop="@dimen/activity_vertical_margin"
		tools:context=".activity.MainActivity">

		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="@dimen/main_header_height"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin">

			<Button android:id="@+id/main_connect_account"
				style="?borderlessButtonStyle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:padding="@dimen/padding_large"
				android:visibility="gone"
				tools:visibility="visible"
				android:text="@string/main_login"/>

			<RelativeLayout android:id="@+id/main_user"
				android:layout_width="match_parent"
				android:layout_height="@dimen/main_header_height"
				android:background="?selectableItemBackground">

				<ImageView android:id="@+id/main_user_photo"
					android:layout_width="@dimen/main_header_height"
					android:layout_height="@dimen/main_header_height"
					android:layout_centerVertical="true"
					android:layout_marginEnd="@dimen/padding"
					android:src="@drawable/user_silhouette"/>

				<TextView android:id="@+id/main_user_name"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/padding"
					android:textAppearance="?android:attr/textAppearanceMedium"
					tools:text="User Name"
					android:text="@{user.name}"
					android:layout_alignParentTop="true"
					android:layout_toEndOf="@+id/main_user_photo"/>

				<TextView android:id="@+id/main_user_contributions_title"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/padding"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:text="@string/main_contributions"
					android:layout_below="@+id/main_user_name"
					android:layout_alignStart="@+id/main_user_name"/>

				<TextView android:id="@+id/main_user_contributions"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/padding"
					android:textAppearance="?android:attr/textAppearanceSmall"
					tools:text="0CZK"
					android:layout_alignBaseline="@+id/main_user_contributions_title"
					android:layout_toEndOf="@+id/main_user_contributions_title"/>
			</RelativeLayout>
		</FrameLayout>

		<!-- challenges & activity list -->
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="@dimen/padding_large"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/main_header_height"
			android:layout_marginBottom="@dimen/activity_vertical_margin">

			<ProgressBar android:id="@+id/main_challenges_progress"
				style="?android:progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:indeterminateOnly="true"
				android:visibility="gone"
				tools:visibility="visible"
				android:indeterminate="true"/>

			<android.support.v7.widget.RecyclerView
				android:id="@+id/main_challenges_list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:scrollbars="vertical"
				android:visibility="gone"
				tools:visibility="visible"/>

			<LinearLayout android:id="@+id/empty_container"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:visibility="gone"
				tools:visibility="visible">

				<TextView android:id="@+id/empty_message"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center"
					android:text="@string/error_general"
					android:layout_gravity="center_horizontal"/>

				<Button android:id="@+id/empty_retry"
					style="@style/Widget.AppCompat.Button.Borderless"
					android:layout_margin="@dimen/padding_large"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:text="@string/reload"/>
			</LinearLayout>
		</FrameLayout>

		<include layout="@layout/part_connect_fit"
			android:id="@+id/main_fit_connect"/>

	</FrameLayout>
</layout>

