<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<data>
		<import type="android.view.View"/>

		<variable name="challenge"
			type="cz.spojenci.android.presenter.ChallengeDetailViewModel.Success"/>

		<variable name="hasActivities"
			type="Boolean"/>
	</data>

	<android.support.design.widget.CoordinatorLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/activity_container"
		tools:context="cz.spojenci.android.activity.ChallengeDetailActivity">

		<android.support.design.widget.AppBarLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:theme="@style/AppTheme.AppBarOverlay">

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				android:title="@{challenge.name}"
				app:popupTheme="@style/AppTheme.PopupOverlay"/>

			<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:paddingBottom="@dimen/padding_large"
				tools:showIn="@layout/activity_challenge_detail"
				tools:context="cz.spojenci.android.activity.ChallengeDetailActivity">

				<TextView android:id="@+id/challenge_detail_label_attributions"
					android:text="@string/challenge_detail_total_attributions"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/padding"
					android:layout_marginStart="@dimen/activity_horizontal_margin"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintLeft_toLeftOf="parent"/>

				<TextView android:id="@+id/challenge_detail_label_price"
					android:text="@string/challenge_detail_unit_price"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/padding"
					android:visibility="invisible"
					tools:visibility="visible"
					app:layout_constraintLeft_toLeftOf="@+id/challenge_detail_label_attributions"
					app:layout_constraintTop_toBottomOf="@+id/challenge_detail_label_attributions"/>

				<TextView android:id="@+id/challenge_detail_value_attributions"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					tools:text="1000CZK"
					android:text="@{challenge.attributions}"
					android:textStyle="bold"
					android:layout_marginStart="@dimen/padding"
					app:layout_constraintLeft_toRightOf="@+id/challenge_detail_label_attributions"
					app:layout_constraintBaseline_toBaselineOf="@+id/challenge_detail_label_attributions"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_constraintRight_creator="1"
					tools:layout_constraintLeft_creator="1"/>

				<TextView android:id="@+id/challenge_detail_value_price"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					tools:text="20CZK"
					android:text="@{challenge.unitPrice}"
					android:textStyle="bold"
					android:layout_marginStart="@dimen/padding"
					app:layout_constraintLeft_toRightOf="@+id/challenge_detail_label_price"
					app:layout_constraintBaseline_toBaselineOf="@+id/challenge_detail_label_price"
					app:layout_constraintRight_toRightOf="parent"
					tools:layout_constraintRight_creator="1"
					tools:layout_constraintLeft_creator="1"/>

			</android.support.constraint.ConstraintLayout>

		</android.support.design.widget.AppBarLayout>

		<android.support.design.widget.FloatingActionButton
			android:id="@+id/fab"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|end"
			android:layout_margin="@dimen/fab_margin"
			app:srcCompat="@drawable/ic_add_white"/>

		<ProgressBar android:id="@+id/challenge_detail_progress"
			style="?android:attr/progressBarStyle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_margin="@dimen/padding_large"
			android:indeterminate="true"/>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/challenge_detail_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			app:layout_behavior="@string/appbar_scrolling_view_behavior"
			tools:listitem="@layout/item_challenge_activity"
			android:visibility="visible"/>

		<LinearLayout android:id="@+id/challenge_detail_empty_container"
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:padding="@dimen/padding_large"
			android:visibility="@{hasActivities ? View.GONE : View.VISIBLE}"
			tools:visibility="visible">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/challenge_detail_empty"
				android:layout_gravity="center_horizontal"/>

			<Button android:id="@+id/challenge_detail_retry"
				style="@style/Widget.AppCompat.Button.Borderless"
				android:layout_margin="@dimen/padding_large"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:text="@string/reload"/>
		</LinearLayout>

	</android.support.design.widget.CoordinatorLayout>
</layout>